<resources>
    <string name="app_name">WeSwing</string>

    <string-array name="genero">
        <item>Hombre</item>
        <item>Mulher</item>
        <item>Otros</item>
    </string-array>

    <string-array name="idioma">
        <item>Español</item>
        <item>Ingles</item>
        <item>Catalan</item>
        <item>Tampoco se tantos idiomas man</item>
    </string-array>

    <string-array name="pais">
        <item>Espanya</item>
        <item>Francia</item>
        <item>Italia</item>
        <item>Portugal</item>
        <item>Regne Unit</item>
        <item>Andorra</item>
    </string-array>

    <string-array name="ciutat">
        <item>Madrid</item>
        <item>Paris</item>
        <item>Andorra la Vella</item>
        <item>Roma</item>
        <item>Oporto</item>
        <item>Damasco</item>
    </string-array>

    <string-array name="ciutats2">
        <item>Totes les zones</item>
        <item>Catalunya</item>
        <item>Madrid</item>
        <item>Valencia</item>
    </string-array>

    <string-array name="follower">
        <item>Follower</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="avis_msg">Es notificara a l\'escola per autoritzarte com a professor</string>
    <string name="avis_ok">D\'acord</string>
    <string name="avis_nook">Cancel•la</string>
    <string name="sample_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse at massa aliquam sapien feugiat dictum. din, aliquet neque id, interdum massa.</string>
    <string name="alumnes">Alumnes</string>
    <string name="user">Professors</string>
    <string name="mogudes">Mogudes</string>
    <string name="fechaCumpl">27 de març de 1997</string>
    <string name="placeholder_moguda_title">Placeholder moguda title</string>
    <string name="organitzat_per_placeholder">Organitzat per: Placeholder</string>
    <string name="duracio_mogudes">27/03/1997-28/03/1997 | 2 horas</string>
    <string name="placeholder_lloc_moguda">Barcelona, Spain</string>
    <string name="assistents_placeholder_moguda">X assistents | X amics</string>
    <string name="nom_escola_placeholder">Nom escola Placeholder</string>
    <string name="descripcio_placeholder">descripcio placeholder</string>
    <string name="fotos">Fotos</string>
    <string name="no_hi_han_fotos">No hi han fotos</string>
    <string name="descripcio">DESCRIPCIO</string>
    <string name="he_apres_aqui">He apres aqui</string>
    <string name="soc_professor">SOC PROFESSOR</string>
    <string name="hi_assistir">Hi assistiré</string>
    <string name="organizador_i_localitzaci">Organizador i localització:</string>
    <string name="filters_spain">Filters: Spain</string>
    <string name="weswing">WeSwing</string>
    <string name="upload_picture">UPLOAD PICTURE</string>
    <string name="register">REGISTER</string>
    <string name="mail">Mail:</string>
    <string name="contrase_a">Contraseña:</string>
    <string name="nombre">Nombre:</string>
    <string name="poblacion">Poblacion:</string>
</resources>