<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown_light"
    tools:context=".fragments.MogudesFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:padding="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/nomMoguda"
                android:text="Jaume Balmes Reunion"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/red"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:background="@color/white" />
            <TextView
                android:id="@+id/tipusMoguda"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:text="ALTRES - LINDY HOP"
                android:textSize="20dp"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_height="40dp"
                android:background="@color/white" />
            <TextView
                android:id="@+id/dataMoguda"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:text="22/04/2017-23/04/2017 (4 hores)  "
                android:textSize="18sp"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_height="40dp"
                android:background="@color/white"  />
            <Switch
                android:id="@+id/asistencia"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/white"
                android:layout_marginTop="15dp"
                android:textSize="25sp"
                android:text="@string/hi_assistir"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <TextView
                android:text="@string/organizador_i_localitzaci"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:background="@color/white" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/white"
                />

            <TextView
                android:text="Descripció"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:background="@color/white" />
            <TextView
                android:id="@+id/descriptionText"
                android:text="@string/sample_text"
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:background="@color/white"
                />
            <Button
                android:id="@+id/asistentsButton"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="Asistents"
                android:textColor="@color/black"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/white"
                />
            <TextView
                android:text="Fotografies"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:background="@color/white" />
            <TextView
                android:text="No hi han fotos"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="50dp"
                android:textSize="15dp"
                android:layout_marginBottom="50dp"
                android:background="@color/white"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>